<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="user_avatar">Profile photo</string>
    <string name="user_nickname">Username</string>
    <string name="save_changes">Save</string>
    <string name="please_input_nickname">Please input nickname</string>
    <string name="use_this_picture">使用</string>
    <string name="passport_address">Address of collection wallet</string>
    <string name="local_protect">Local security</string>
    <string name="export_passport">Back up</string>
    <string name="modify_passport_password">Change wallet password</string>
    <string name="remove_passport">Delete the wallet (logout)</string>
    <string name="check_update">Version update</string>
    <string name="address_description">QR code showscontains yourthe wallet address, which could be used as collection address for ETH and DCC</string>
    <string name="copy_passport_address">Copy the wallet address</string>
    <string name="choose_protect_type">Choose method</string>
    <string name="guesture_password">Guesture password</string>
    <string name="digitalnumerical_password">Numerical password</string>
    <string name="enable_gesture_pattern">Enable guesture password</string>
    <string name="please_draw_pattern">Please draw here again</string>
    <string name="enable_pin">Enable numerical password</string>
    <string name="fingerprint_identification">Fingerprint identification</string>
    <string name="skip">Skip</string>
    <string name="skip1">Skip ></string>
    <string name="verify_pin">Numrical code verification</string>
    <string name="pin_incorrect_please_retry">Wrong code, please try again</string>
    <string name="repeat_pin">Enter digit code again</string>
    <string name="notice_gesture_at_least_4">Connect at least 4 dots, please try again</string>
    <string name="gesture_password_not_match_please_retry">Different from last pattern, please try again</string>
    <string name="protect_enabled">Able</string>
    <string name="protect_not_enabled">Disabled</string>
    <string name="please_draw_pattern_again">Please draw here again</string>
    <string name="verify_gesture_pattern">Verifying hand sign ciphers</string>
    <string name="gesture_password_error_please_retry">Wrong password!</string>
    <string name="copy_succeed">Success</string>
    <string name="input_back_cancel"><![CDATA[<Delete]]></string>

    <string name="verify_finger_print">验证指纹识别</string>
    <string name="pin_repeat_not_match">两次密码输入不一致</string>
    <string name="please_touch_finger_print_sensor">请将手指放于指纹在传感器上</string>
    <string name="local_protect_enabled">本地保护已开启</string>
    <string name="edit_nickname">更改昵称</string>
    <string name="data_cloud_storage">Cloud Storage</string>
    <string name="start_in">Get Started</string>
    <string name="start_out">Synchronization is enabled</string>

    <string name="ipfs_open_tip">1.What are the advantages of cloud storage?\n\tAfter starting cloud storage, the local authentication information of your mobile phone can be encrypted and uploaded to the cloud. When you delete your wallet and re-import or replace the device, you can synchronize the authentication information to the mobile phone without re-authentication.\n\n2.Where is the data stored?\n\tThe data is stored in IPFS, a network transmission protocol system for distributed storage and file sharing. Data will be stored in a decentralized way, which is more stable and efficient than the traditional way.\n\n3.Is cloud storage secure?\n\tYes, the data will be encrypted with AES - a symmetric encryption algorithm - and stored in IPFS. Only you can decrypt it with your own password.\n\n4.What's the use of cloud storage password?\n\tCloud storage password is used to unlock the encrypted personal data. The password is not stored by system. If it is lost then it cannot be retrieved, please keep it properly.\n\n</string>
    <string name="ipfs_open_tip1">1.What are the advantages of cloud storage?\n\tAfter starting cloud storage, the local authentication information of your mobile phone can be encrypted and uploaded to the cloud. When you delete your wallet and re-import or replace the device, you can synchronize the authentication information to the mobile phone without re-authentication.\n\n</string>
    <string name="ipfs_open_tip2">2.Where is the data stored?\n\tThe data is stored in IPFS, a network transmission protocol system for distributed storage and file sharing. Data will be stored in a decentralized way, which is more stable and efficient than the traditional way.\n\n</string>
    <string name="ipfs_open_tip3">3.Is cloud storage secure?\n\tYes, the data will be encrypted with AES - a symmetric encryption algorithm - and stored in IPFS. Only you can decrypt it with your own password.\n\n</string>
    <string name="ipfs_open_tip4">4.What\'s the use of cloud storage password?\n\tCloud storage password is used to unlock the encrypted personal data. The password is not stored by system. If it is lost then it cannot be retrieved, please keep it properly.\n\n</string>

    <string name="ipfs_title1">Password Reset</string>

</resources>
