<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:text="@string/data_cloud_storage"
            android:textColor="@color/FF4A4A4A"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/help_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/icon_address_book_query_delete"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="@dimen/content_padding_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipfs_open_tip1"
                android:textColor="@color/FF4A4A4A"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipfs_open_tip2"
                android:textColor="@color/FF4A4A4A"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipfs_open_tip3"
                android:textColor="@color/FF4A4A4A"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipfs_open_tip4"
                android:textColor="@color/FF4A4A4A"
                android:textSize="14sp"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
