<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8FF">

    <include
        android:id="@+id/toolbar_root"
        layout="@layout/include_toolbar" />

    <TextView
        android:id="@+id/tv_passport_address"
        style="@style/TextActionLine"
        android:layout_marginTop="10dp"
        android:text="@string/passport_address"
        app:layout_constraintTop_toBottomOf="@id/toolbar_root" />

    <View
        style="@style/DividerHorizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_passport_address" />

    <TextView
        android:id="@+id/tv_passport_backup"
        style="@style/TextActionLine"
        android:text="@string/export_passport"
        app:layout_constraintTop_toBottomOf="@id/tv_passport_address" />

    <View
        style="@style/DividerHorizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_passport_backup" />

    <TextView
        android:id="@+id/tv_modify_passport_password"
        style="@style/TextActionLine"
        android:text="@string/modify_passport_password"
        app:layout_constraintTop_toBottomOf="@id/tv_passport_backup" />

    <TextView
        android:id="@+id/tv_about_us"
        style="@style/TextActionLine"
        android:layout_marginTop="10dp"
        android:text="@string/about_us"
        app:layout_constraintTop_toBottomOf="@id/tv_modify_passport_password" />

    <View
        style="@style/DividerHorizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_about_us" />

    <TextView
        android:id="@+id/tv_check_update"
        style="@style/TextActionLine"
        android:text="@string/check_update"
        app:layout_constraintTop_toBottomOf="@id/tv_about_us" />

    <TextView
        android:id="@+id/tv_current_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:textColor="@color/text_min"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_check_update"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/tv_delete_passport"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:gravity="center"
        android:text="删除钱包"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/tv_check_update" />


</android.support.constraint.ConstraintLayout>