<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="fingerPrintAvailable"
            type="boolean"/>
        <variable
            name="fingerPrintEnrolled"
            type="boolean"/>
        <variable
            name="cancelText"
            type="String"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/choose_protect_type"
                />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:padding="6dp"
                android:textSize="15sp"
                android:text="@{cancelText}"
                android:textColor="?attr/colorAccent"
                tools:text="@string/skip"
                />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/divider_line"
            />

        <TextView
            android:id="@+id/tv_select_finger_print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="17sp"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="指纹识别"
            android:visibility="@{fingerPrintAvailable?View.VISIBLE:View.GONE}"
            android:enabled="@{fingerPrintEnrolled}"
            android:textColor="?attr/colorAccent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/divider_line"
            android:visibility="@{fingerPrintAvailable?View.VISIBLE:View.GONE}"
            />

        <TextView
            android:id="@+id/tv_select_gesture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="17sp"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/guesture_password"
            android:textColor="?attr/colorAccent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/divider_line"
            />

        <TextView
            android:id="@+id/tv_select_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="17sp"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/digitalnumerical_password"
            android:textColor="?attr/colorAccent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/divider_line"
            />

    </LinearLayout>

</layout>

