<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_gesture_pattern"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="?attr/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/divider_line"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/please_draw_pattern"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_divider"
        />
    <TextView
        android:id="@+id/tv_error_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hint"
        tools:text="@string/gesture_password_error_please_retry"
        android:textColor="?attr/colorAccent"
        android:textSize="15sp"
        />

    <io.wexchain.android.localprotect.view.LockPatternView
        android:id="@+id/lpv_gesture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toBottomOf="@id/tv_error_hint"
        app:layout_constraintBottom_toTopOf="@id/v_divider_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <View
        android:id="@+id/v_divider_2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/divider_line"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:textSize="17sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>